--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
+      "pretty-quick --staged",
       "eslint src/ --fix",
       "git add"
     ]
